--- a/src/app/pages/employee/employee.html
+++ b/src/app/pages/employee/employee.html
@@ -33,10 +33,10 @@
                             <li>
                                 <a ng-click="userPassword()" href="">Password</a>
                             </li>
-                            <li>
+                            <li ng-if="userResultData!='NoDataFound'">
                                 <a ng-click="userRole()" href="">Role</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a >Login Disabled</a>
                                 <a ng-click="userPassword()" data-ui-sref="">Password</a>
                             </li>
@@ -45,7 +45,7 @@
                             </li>
                             <li>
                                 <a href  data-ui-sref="">Login Disabled</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
 
