--- a/src/app/pages/reports/list/fieldduty/fieldduty.html
+++ b/src/app/pages/reports/list/fieldduty/fieldduty.html
@@ -16,7 +16,7 @@
                         <label dotranslate ng-bind="selectedDropDown.pageinfo.fields.DeptId.text">
                             *
                         </label>
-                        <select class="form-control input-sm" ng-model="entity.DeptId" ng-options="subunit.value as subunit.name for subunit in selectedDropDown.pageinfo.selects.SubUnitId"></select>
+                        <select class="form-control input-sm" ng-model="entity.DeptId" ng-options="subunit.value as subunit.name for subunit in selectedDropDown.pageinfo.selects.DeptId"></select>
                     </div>
                     <div class="col-sm-4">
                         <label dotranslate ng-bind="selectedDropDown.pageinfo.fields.FDStatusId.text">
