--- a/src/app/pages/reports/list/monthly/monthly.html
+++ b/src/app/pages/reports/list/monthly/monthly.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
     <div class="modal-header bg-primary">
-        <h3 class="inline-block clear-vertical-margin" dotranslate>Employee Monthly Detail</h3>
+        <h3 class="inline-block clear-vertical-margin" dotranslate>Employee Monthly Verified Attendance</h3>
     </div>
     <div class="modal-body content-container">
         <form name="leaveDetail" id="leaveDetail" novalidate>
