--- a/src/app/theme/components/pageTop/pageTop.html
+++ b/src/app/theme/components/pageTop/pageTop.html
@@ -1,17 +1,20 @@
 <div class="page-top clearfix" scroll-position="scrolled" ng-class="{'scrolled': scrolled}">
-  
-  
-  <a href="#/dashboard" class="al-logo clearfix">
+
+
+  <a href="#/dashboard" class="">
+    <img src="assets/productdirectory/logo.png" >
     <div></div>
   </a>
-    <a href class="collapse-menu-link ion-navicon" ba-sidebar-toggle-menu></a>
+
+
+  <a href class="collapse-menu-link ion-navicon"  ba-sidebar-toggle-menu></a>
   <div class="search">
     <!-- <i class="ion-ios-search-strong" ng-click="startSearch()"></i>
     <input id="searchInput" type="text" placeholder="Search for..."> -->
     <h3>{{company.name}}</h3>
 
   </div>
-  
+
   <div class="user-profile clearfix">
     <!-- <div class="current-Period" ng-controller="currentPeriodController">
 
@@ -21,7 +24,7 @@
 
       
     </div> -->
-    
+
     <div class="al-user-profile" uib-dropdown>
       <a uib-dropdown-toggle class="profile-toggle-link">
         <!-- <img ng-src="{{::( 'Nasta' | profilePicture )}}"> -->
@@ -46,7 +49,7 @@
         </li>
       </ul>
     </div>
-    
+
   </div>
   <msg-center></msg-center>
 
